# suncalcPy

./: setup.cfg  setup.py
src/suncalcPy/: suncalc.py
