# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = suncalcPy
description = Add a short description here!
author = Abe Miessler
author_email = abemiesler@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/broham/suncalcpy
# Add here related links, for example:
# # project_urls =
# #    Documentation = https://pyscaffold.org/
# #    Source = https://github.com/pyscaffold/pyscaffold/
# #    Changelog = https://pyscaffold.org/en/latest/changelog.html
# #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
# #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
# #    Download = https://pypi.org/project/PyScaffold/#files
# #    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
# https://peps.python.org/pep-0508/
# https://github.com/michimussato/suncalcPy/archive/refs/tags/0.1.zip
# pip @ https://github.com/pypa/pip/archive/1.3.1.zip#sha1=da9234ee9982d4bbb3c72346a6de940a148ea686
# install_requires =
#     importlib-metadata; python_version<"3.8"
#     suncalcPy @ https://github.com/michimussato/suncalcPy/archive/refs/tags/0.1.zip

[options.packages.find]
where = src
exclude =
    tests
